--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "jest": "^27.0.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-vuetify": "~2.4.8"
+  },
+  "volta": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
   }
 }
